feat: Refatoração do frontend e correção da classificação

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,6 @@ Flask==2.0.1
 Werkzeug==2.0.3
 numpy==1.26.4
 pillow==10.2.0
-requests==2.31.0
-inference-sdk
-roboflow==1.1.9
-supervision==0.18.0
-opencv-python==4.8.1.78
+ultralytics>=8.0.0
+flask-cors>=4.0.0
 
