--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .DS_Store
+
+# ML Models
+*.pt
+egg_detection_yolov8n_final.pt
